--- a/materialyou.info.yml
+++ b/materialyou.info.yml
@@ -8,6 +8,7 @@ core_version_requirement: ^8.9 || ^9.3
 package: Material
 base theme: classy
 regions:
+  topappbar: Top App Bar
   content: Content
 libraries:
   - materialyou/materialyou
